@@ -2,6 +2,7 @@ ART 4.15
 * Allow dynamic lov to use groovy data
 * Apply max file upload setting to file parameter
 * Include report parameters in get report REST endpoint
+* Add REST endpoint to get report details by name
 
 ART 4.14
 * Added directDownload url option
